[package]
name = "teensy-four-way"
version = "0.1.0"
authors = ["Robert Forsman <git@thoth.purplefrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
# Remove me if you don't want logging
log = "0.4.11"
teensy4-panic = "0.2.0"
imxrt-hal = "*"

usbd-hid = "*"
usb-device= "*"
imxrt-usbd = "*"
imxrt-uart-log = "*"

alloc-cortex-m = "*"

keycode-translation = { path = "keycode_translation" }

[dependencies.teensy4-bsp]
version = "0.2"
default-features = false
features = ["rt", "systick"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[workspace]
members=[ "keycode_translation" ]
